# csoves_prog2

./: .gitignore  CMakeLists.txt  Pipe.cpp  Pipe.hpp  README.md  Simulation.cpp  Simulation.hpp  adatok1  data.csv  main.cpp  pelda1.csv  testData1.csv  testData_nagyKanyargo.csv
cso_fajtak/: DoubleTurn.hpp  PipeIdom.cpp  PipeIdom.hpp  SimplePipe.cpp  SimplePipe.hpp  Sink.cpp  Sink.hpp  Source.cpp  Source.hpp  Valve.cpp  Valve.hpp
test_files/: Elagazas2.csv  Forras.csv  Forras2.csv  Forras3.csv  Forras3_JAVITOTT.csv  HelloElagazas.csv  HelloKanyar.csv  HelloWorld.csv  Kanyargo.csv  Lehetetlen1.csv  NagyPalya.csv  Paralell2.csv  TobbForras.csv  pelda1.csv  testData1.csv
